--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </header>
         <section>
             <div class="formContainer">
-                <h2>garanta o seu lugar no workshop do maior especialista em marketing da atualidade</h2>
-                <p>Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar 
+                <h2 class="mb">garanta o seu lugar no workshop do maior especialista em marketing da atualidade</h2>
+                <p class="mb">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar 
                 contar com a sorte.</p>
                 <form action="">
                     <input type="text" id="name" name="name" placeholder="Nome">
