--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
                 </form>
             </div>
         </section>
+        <footer>
+            <img src="imagens/face.jpg" alt="" class="picture">
+            <div class="description">
+            <h3>O Palestrante</h3>
+            <p>Carlos Fonata é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepara-se para sair do evneto com uma nova visão do que é possível ser feito para o seu negócio decolar</p>
+            <p>Formado em Markting pela Universidade XYZ e fundador da MarkUP, a empresa vencedora dos últimos 5 Prêmios MarketingBR<p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
